Embed REUSE in standard workflow (tox).
Run compliance tests with FSFE REUSE automatically with tox. REUSE is
about licensing and copyright in Free and Open Source Projects. See
https://reuse.software for details.

After hooking tox runs in, say, Travis-CI, we get a license policy check
automatically when pushing changes. Thanks to FSFE for this.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = flake8, py36, cover
+envlist = flake8, py36, cover, reuse
 
 [testenv:flake8]
 deps=flake8
@@ -21,8 +21,16 @@ commands=
 
 [coverage:run]
 
-
 [coverage:report]
 include = "setup.py,pgp_milter/*,tests"
 show_missing = true
 fail_under = 100
+
+[testenv:reuse]
+# FSFE REUSE compliance test
+# cf. https://reuse.software/
+deps=
+  fsfe-reuse
+recreate=True
+commands=
+  reuse lint
