Use regular dist when running `resuse` checks.
The develop flag makes no sense for mere checking of filelists.

--- a/tox.ini
+++ b/tox.ini
@@ -31,6 +31,7 @@ fail_under = 100
 # cf. https://reuse.software/
 deps=
   fsfe-reuse
-recreate=True
+usedevelop=false
+recreate=true
 commands=
   reuse lint
