Include samples in MANIFEST.in.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
 exclude pyproject.toml
 recursive-include tests *.pub *.py *.txt
+recursive-include tests/samples *
 recursive-include LICENSES *.txt
 recursive-include .reuse dep5
 include CHANGES.rst COPYRIGHT MANIFEST.in README.rst requirements.txt setup.cfg setup.py tox.ini
