Remove trash/Register .sec files.
Tell MANIFEST.in and reuse, that *.sec files (private GPG key parts)
are part of our project.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 exclude pyproject.toml
-recursive-include tests *.pub *.py *.txt
+recursive-include tests *.pub *.py *.sec *.txt
 recursive-include tests/samples *
 recursive-include LICENSES *.txt
 recursive-include .reuse dep5
