Make coverage work better.
Use `coverage` as test runner (calling py.test) reduces test run time
and gets proper results also when running `tox` with coverage option
only.

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ commands=flake8 tests pgp_milter setup.py
 [testenv:cover]
 commands=
   coverage report
+depends=py37
 
 [testenv]
 deps=
@@ -16,7 +17,6 @@ deps=
 usedevelop=True
 recreate=True
 commands=
-  py.test
   coverage run -m py.test
 
 [coverage:run]
