--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ envlist = flake8, py36, cover, reuse
 
 [testenv:flake8]
 deps=flake8
-commands=flake8 tests pgp_milter setup.py
+commands=flake8 tests src setup.py
 
 [testenv:cover]
 commands=
