Apply new source location to `tox.ini`.

--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,19 @@
 [tox]
-envlist = flake8, py36, cover, reuse
+minversion = 3.12
+envlist = flake8, py36, py37, cover, reuse
 
 [testenv:flake8]
 deps=flake8
 commands=flake8 tests src setup.py
 
 [testenv:cover]
+deps = coverage >= 5.0.1
+skip_install = True
+setenv = COVERAGE_FILE={toxworkdir}/.coverage
 commands=
   coverage report
-depends=py37
+depends = py37, py38
+parallel_show_output = True
 
 [testenv]
 deps=
@@ -22,7 +27,7 @@ commands=
 [coverage:run]
 
 [coverage:report]
-include = "setup.py,pgp_milter/*,tests"
+include = "setup.py,src/pgp_milter/*,tests"
 show_missing = true
 fail_under = 100
 
