Complete rewrite of tox.ini.
Now we have working multiversion coverage and `reuse` scans only the
real project code, not any artefacts.

--- a/tox.ini
+++ b/tox.ini
@@ -1,42 +1,70 @@
 [tox]
 minversion = 3.12
 envlist = flake8, py36, py37, cover, reuse
+isolated_build = True
 
-[testenv:flake8]
-deps=flake8
-commands=flake8 tests src setup.py
+[pytest]
+addopts = -ra
+testpaths = tests
+xfail_strict = true
+filterwarnings =
+    once::Warning
 
-[testenv:cover]
-deps = coverage >= 5.0.1
-skip_install = True
-setenv = COVERAGE_FILE={toxworkdir}/.coverage
-commands=
-  coverage report
-depends = py37, py38
-parallel_show_output = True
 
 [testenv]
-deps=
-  pytest
-  coverage
-usedevelop=True
-recreate=True
-commands=
-  coverage run -m py.test
+# Prevent random setuptools/pip breakages like
+# https://github.com/pypa/setuptools/issues/1042 from breaking our builds.
+setenv =
+    VIRTUALENV_NO_DOWNLOAD=1
+extras = {env:TOX_AP_TEST_EXTRAS:tests}
+commands = python -m pytest {posargs}
 
-[coverage:run]
 
-[coverage:report]
-include = "setup.py,src/pgp_milter/*,tests"
-show_missing = true
-fail_under = 100
+[testenv:py37]
+# Python 3.6+ has a number of compile-time warnings on invalid string escapes.
+# PYTHONWARNINGS=d and --no-compile below make them visible during the Tox run.
+install_command = pip install --no-compile {opts} {packages}
+setenv =
+    PYTHONWARNINGS=d
+extras = {env:TOX_AP_TEST_EXTRAS:tests}
+commands = coverage run -m pytest {posargs}
+
+
+[testenv:py38]
+# Python 3.6+ has a number of compile-time warnings on invalid string escapes.
+# PYTHONWARNINGS=d and --no-compile below make them visible during the Tox run.
+basepython = python3.8
+install_command = pip install --no-compile {opts} {packages}
+setenv =
+    PYTHONWARNINGS=d
+extras = {env:TOX_AP_TEST_EXTRAS:tests}
+commands = coverage run -m pytest {posargs}
+
+[testenv:flake8]
+deps = flake8
+commands = flake8 tests src setup.py
+skip_install = true
+
+[testenv:cover]
+basepython = python3.7
+skip_install = True
+deps = coverage[toml]>=5.0.2
+parallel_show_output = True
+commands =
+    coverage combine
+    coverage report
+depends =
+    py36
+    py37
 
 [testenv:reuse]
 # FSFE REUSE compliance test
 # cf. https://reuse.software/
+basepython = python3.7
 deps=
   fsfe-reuse
-usedevelop=false
-recreate=true
-commands=
-  reuse lint
+skip_install = false
+changedir = {envtmpdir}
+commands =
+  python {toxinidir}/prep_reuse.py
+  reuse --root ./pgp-milter lint
