Use py38 as standard/base version.

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 3.12
-envlist = flake8, py36, py37, cover, reuse
+envlist = flake8, py36, py37, py38, cover, reuse
 isolated_build = True
 
 [pytest]
@@ -46,7 +46,7 @@ commands = flake8 tests src setup.py
 skip_install = true
 
 [testenv:cover]
-basepython = python3.7
+basepython = python3.8
 skip_install = True
 deps = coverage[toml]>=5.0.2
 parallel_show_output = True
@@ -54,13 +54,12 @@ commands =
     coverage combine
     coverage report
 depends =
-    py36
-    py37
+    py38
 
 [testenv:reuse]
 # FSFE REUSE compliance test
 # cf. https://reuse.software/
-basepython = python3.7
+basepython = python3.8
 deps=
   fsfe-reuse
 skip_install = false
