Let `py.test` ignore crypto deprecation warnings.
These warnings arise from `pgpy` offering algorithms that are part of
PGP standard although they are insecure and already deprecated.

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,9 @@ testpaths = tests
 xfail_strict = true
 filterwarnings =
     once::Warning
+    ignore:Blowfish has been deprecated
+    ignore:CAST5 has been deprecated
+    ignore:IDEA has been deprecated
 
 
 [testenv]
