--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 3.12
-envlist = flake8, py36, py37, py38, cover, reuse
+envlist = flake8, py37, py38, py39, cover, reuse
 isolated_build = True
 
 [pytest]
@@ -20,10 +20,11 @@ filterwarnings =
 setenv =
     VIRTUALENV_NO_DOWNLOAD=1
 extras = {env:TOX_AP_TEST_EXTRAS:tests}
-commands = python -m pytest {posargs}
+#commands = python -m pytest {posargs}
+commands = coverage run -m pytest {posargs}
 
 
-[testenv:py37]
+[testenv:py310]
 # Python 3.6+ has a number of compile-time warnings on invalid string escapes.
 # PYTHONWARNINGS=d and --no-compile below make them visible during the Tox run.
 install_command = pip install --no-compile {opts} {packages}
